// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.schema;

option go_package = "namespacelabs.dev/foundation/schema";

// Reference to an entity inside a package, e.g. a binary, a test, a main/sidecar container, etc.
message PackageRef {
    // Computed package name. Use PackageName() in the code.
    string package_name = 1;

    // The user-defined name.
    // Can be empty if parsed from the user code, e.g. a legacy reference to a binary.
    string name = 2;
}

message ServiceRef {
    PackageRef server_ref   = 1;
    string     service_name = 2;
}